src/styles/terminal.scss
.terminal {
  color: #fff;
  border: 1px solid #fff;
  border-radius: 10px;
  background-color: #000;
  max-width: 680px;
  min-width: 300px;
  flex: 1;
  position: relative;

  .nav-info {
    min-height: 35px;
    background-color: #383636;
    border-bottom: 1px solid rgb(255, 255, 255, 35%);
    border-radius: 10px 10px 0 0;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    user-select: none;

    .actions {
      position: absolute;
      display: flex;
      flex-direction: row;
      column-gap: 6px;
      left: 10px;
      top: 8px;

      .circle {
        height: 20px;
        width: 20px;
        border-radius: 50%;

        &.red {
          background-color: #fe5e55;
        }

        &.yellow {
          background-color: #fcbb2c;
        }

        &.green {
          background-color: #25c740;
        }
      }
    }

    .title {
      font-size: 0.8rem;
      font-weight: 500;
    }
  }

  .terminal-sing {
    position: absolute;
    left: 5px;
    font-weight: bold;
  }

  .content {
    font-size: max(min(1rem, 1.2vw, calc(1.2 * 700px / 100)), 0.7rem);
    text-align: left;
    white-space: pre;
    padding: 0 1rem;

    &:focus {
      outline: none;
    }
  }
}

